projeto alterado para se conectar com o Mongo, feito o CRUD completo e remocao das funcoes de ler e gravar arquivo

--- a/prjBookControl/prjBookControl.csproj
+++ b/prjBookControl/prjBookControl.csproj
@@ -15,4 +15,8 @@
     <None Include="C:\Users\user\source\repos\prjBookControl\prjBookControl\.editorconfig" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="2.19.1" />
+  </ItemGroup>
+
 </Project>
